# master-thesis-autonomous-mobile-robot

./: .gitignore  Makefile  README.md  README_simulation.md  estimator_test.ipynb  improved_estimator.py  master_estimate_space.py  occupancy_estimator_test.ipynb  temp_ros_install  time_occupancy_estimator_test_ v2.ipynb  time_occupancy_estimator_test_v2 copy.ipynb
docker_development/: Dockerfile  README.md  devcontainer.json  settings.json
experiments/: occupancy_estimator_test.ipynb  temp_for_experiment.txt  time_occupancy_estimator_test_v2 copy.ipynb
maps/example_maps_odom_v5_waffle_counter_clockwise/: map_odom_20250429_122541_290296.json  map_odom_20250429_122546_292825.json  map_odom_20250429_122551_287657.json  map_odom_20250429_122556_288622.json  map_odom_20250429_122601_289140.json  map_odom_20250429_122606_288940.json  map_odom_20250429_122611_290043.json  map_odom_20250429_122616_289000.json  map_odom_20250429_122621_291426.json  map_odom_20250429_122626_289808.json  map_odom_20250429_122631_288012.json  map_odom_20250429_122636_288106.json  map_odom_20250429_122641_289983.json  map_odom_20250429_122646_290145.json  map_odom_20250429_122651_288938.json  map_odom_20250429_122656_290917.json  (+48 more)
nodes/: README.md
nodes/config/: nav2_params.yaml  (+2 more)
nodes/project_bringup/: CMakeLists.txt  package.xml
nodes/project_bringup/config/: nav2_params.yaml  slam.yaml
nodes/project_bringup/config/robot/: nav2_params.yaml  slam.yaml
nodes/project_bringup/launch/: pc_bringup.launch.py  pc_bringup_autonomous.launch.py  robot_bringup.launch.py
ros2_debug/: README.md
(+114 files in other folders)
