<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>project_bringup</name>
  <version>0.0.0</version>
  <description>Launch description for robot and PC</description>
  <author email="milosz.jakub.dobosz@gmail.com">Milosz Dobosz</author>
  <author email="rysszymon00@gmail.com">Szymon Rys</author>
  <maintainer email="milosz.jakub.dobosz@gmail.com">Milosz Dobosz</maintainer>
  <maintainer email="rysszymon00@gmail.com">Szymon Rys</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urg_node2</exec_depend>
  <exec_depend>miabot_node</exec_depend>

  <exec_depend>miabot_node</exec_depend>
  <exec_depend>miabot_node</exec_depend>
  <exec_depend>miabot_node</exec_depend>
  <exec_depend>miabot_node</exec_depend>
  <exec_depend>miabot_node</exec_depend>
  <exec_depend>miabot_node</exec_depend>
  <exec_depend>miabot_node</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
